# connect-by-coffee

./: .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  README.md  README.rst  go.mod  go.sum  main.go  main_HS1xx.go  setup.cfg  setup.py  synesti
docs/: conf.py  index.rst
notes/: go_lang.md  python-kasa.md  raspberry_pi.md  skeleton.py
pkg/: Discover.go  README.md  main_HS1xx.go
src/connect_by_coffee/: bulb.py  main.py  plug.py
src/synesthesus/: bulb.py  globals.py  main.py  plug.py  skeleton.py  utility.py
tests/: conftest.py  test_skeleton.py
